@@ -1,4 +1,5 @@
 version 0.99.2 (not yet released)
+           * added cubed_sphere example.
            * updated NetCDFFile to use pupynere 1.0.2 (now can write as well
              as read!).
            * now works with geos version 3.
